kube/squidproxy-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: squidproxy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: squidproxy
    spec:
      containers:
        - name: squidproxy
          image: quay.io/ukhomeofficedigital/squidproxy:v0.0.5
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
          ports:
            - containerPort: 3129
          resources:
            limits:
              memory: "300Mi"
              cpu: "2"
            requests:
              memory: "128Mi"
              cpu: "200m"
          volumeMounts:
            - name: squid-config
              mountPath: /etc/squid
      volumes:
        - name: squid-config
          configMap:
            name: squidproxy-config
