kube/squidproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: squidproxy
  labels:
    name: squidproxy
    service: squidproxy
spec:
  type: NodePort
  ports:
    - name: http
      port: 31290
      targetPort: 3129
      nodePort: 31290
  selector:
    name: squidproxy
