kube/squidproxy-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: squid-network-policy
spec:
  podSelector:
    matchLabels:
      name: squidproxy 
  ingress:
  - ports:
    - protocol: TCP
      port: 31290
